chaim-bprint-spec/tests/fixtures/valid/users.bprint
{
  "schemaVersion": "1.0",
  "entityName": "User",
  "description": "User account information",
  "identity": { "fields": ["userId"] },
  "fields": [
    { "name": "userId", "type": "string", "required": true },
    { "name": "email", "type": "string", "required": true },
    { "name": "name", "type": "string", "required": true },
    { "name": "active", "type": "boolean", "required": false, "default": true },
    { "name": "createdAt", "type": "timestamp", "required": true }
  ]
}
